# msia-zoning

./: .env.example  .gitignore  IMPLEMENTATION_PLAN.md  README.md  docker-compose.yml  pyproject.toml
app/web/: Dockerfile  next.config.mjs  package-lock.json  package.json
app/web/app/: globals.css  layout.tsx  page.tsx
app/web/app/sources/: page.tsx
app/web/components/: detail-drawer.tsx  filters-panel.tsx  legend.tsx  map-canvas.tsx  map-shell.tsx  search-box.tsx  stats-bar.tsx
app/web/lib/: db.ts  filters.ts  map.ts  municipalities.ts  queries.ts  types.ts
data/raw/mbpj/20260306T231705Z_mbpj_phase1/: manifest.json
data/raw/mbpj/20260307T052220Z_mbpj_context_geometry/: manifest.json
docs/: data-dictionary.md  source-attribution.md
docs/runbooks/: local-stack.md  mbjb-pipeline.md  mbpj-pipeline.md
infra/migrations/: 001_init.sql
infra/tiles/: pg_tileserv.toml
scripts/ingest/: run_mbjb_pipeline.py  run_mbpj_pipeline.py
scripts/normalize/: normalize_mbjb_stage.py  normalize_mbpj_stage.py
scripts/publish/: load_mbpj_postgis.py  load_postgis.py
scripts/qa/: run_mbjb_qa.py  run_mbpj_qa.py
src/malaysia_permits_map/: config.py
src/malaysia_permits_map/db/: sql.py
src/malaysia_permits_map/etl/: arcgis_client.py  mbjb.py  mbpj.py  mbpj_geometry.py
src/malaysia_permits_map/models/: arcgis.py
src/malaysia_permits_map/utils/: text.py
tests/: test_mbjb_source_contract.py  test_mbpj_geometry.py  test_mbpj_parser.py  test_text.py
tests/fixtures/: mbjb_kebenaran_merancang_layer_metadata.json  mbpj_homepage_approved_projects.html
(+33 files in other folders)
